# OptML

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  affine.mlir  benchmark.sh  build_llvm.sh  build_mlir.sh  build_obj.sh  make_MLIR_obj.py
Torch_MLIR/pytorch/: alexnet.mlir  resnet152.mlir  vgg11.mlir
benchmarks/: CMakeLists.txt  run_bench.cpp
benchmarks/GoogleBenchmarks/: CMakeLists.txt  run_bench.cpp
benchmarks/Hardware_Counters/: CMakeLists.txt  run_bench.cpp  run_bench.h
benchmarks/Hardware_Counters_or_Time/: CMakeLists.txt  run_bench.cpp  run_bench.h
include/Transform/Affine/: Affine64Unroll.h  AffineFullUnroll.h
include/Transform/MakeRunAble/: RemoveForwardFuncArgsAndReturn.h  RemoveForwardFuncArgsAndReturnZeroInit.h  RemoveGlobalConstants.h  ZeroInitRemoveForwardFuncArgsAndReturn.h
include/Transform/SCCP/: ProjectSCCP.h
lib/: CMakeLists.txt
lib/Transform/: CMakeLists.txt
lib/Transform/Affine/: Affine64Unroll.cpp  AffineFullUnroll.cpp  CMakeLists.txt
lib/Transform/MakeRunAble/: CMakeLists.txt  RemoveForwardFuncArgsAndReturn.cpp  RemoveForwardFuncArgsAndReturnZeroInit.cpp  RemoveGlobalConstants.cpp  ZeroInitRemoveForwardFuncArgsAndReturn.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt  project-opt.cpp  tutorial-opt.cpp
